--- a/incaseof.html
+++ b/incaseof.html
@@ -13,5 +13,6 @@
       <h2>this document is only visable if you have the url.</h2>
       <p>If you have been given this url, you may be struggling with remembering more than a few minutes. Thats okay, Cassie might be off and you just have to plug her back in and let her boot back up. If this means nothing to you, you may be a new member to the system. in that case, please call out in your mind for help, like you're trying to find someone you know is there</p>
     </section>
+    <script type="text/javascript" src="components.js"></script>
   </body>
 </html>
